// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderTabHistory /> dark: renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          scrollWidth={undefined}
          style={
            Array [
              Object {},
              Array [
                Object {
                  "position": "relative",
                  "width": "auto",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                undefined,
              ]
            }
          >
            <View
              data={
                Array [
                  "Time",
                  "Pair",
                  "Type",
                  "Price (WETH)",
                  "Total (WETH)",
                  "Fee (ZRX)",
                ]
              }
              flexAr={
                Array [
                  2,
                  2,
                  1,
                  2,
                  2,
                  2,
                  1,
                ]
              }
              header={true}
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#000000",
                      "display": "flex",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "paddingBottom": 5,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                      "paddingTop": 5,
                    },
                    undefined,
                  ],
                ]
              }
              width={540}
            >
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Time"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Time
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Pair"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pair
                </Text>
              </View>
              <View
                flexItem={1}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Type"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Type
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Price (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Price (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Total (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Total (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Fee (ZRX)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fcfcfc",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Fee (ZRX)
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "borderBottomWidth": 1,
                      "borderColor": "#282828",
                      "borderTopWidth": 1,
                      "height": 5,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
          <RCTScrollView
            data={Array []}
            disableVirtualization={false}
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={false}
            initialNumToRender={10}
            invertStickyHeaders={undefined}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onContentSizeChange={[Function]}
            onEndReachedThreshold={2}
            onLayout={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            renderItem={[Function]}
            scrollEventThrottle={50}
            stickyHeaderIndices={Array []}
            updateCellsBatchingPeriod={50}
            viewabilityConfigCallbackPairs={Array []}
            windowSize={21}
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`<OrderTabHistory /> light: renders correctly 1`] = `
<View
  style={
    Array [
      Object {},
      Array [
        Object {},
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "100%",
          },
          undefined,
        ],
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          scrollWidth={undefined}
          style={
            Array [
              Object {},
              Array [
                Object {
                  "position": "relative",
                  "width": "auto",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                undefined,
              ]
            }
          >
            <View
              data={
                Array [
                  "Time",
                  "Pair",
                  "Type",
                  "Price (WETH)",
                  "Total (WETH)",
                  "Fee (ZRX)",
                ]
              }
              flexAr={
                Array [
                  2,
                  2,
                  1,
                  2,
                  2,
                  2,
                  1,
                ]
              }
              header={true}
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#fefaec",
                      "display": "flex",
                      "flexDirection": "row",
                      "flexWrap": "nowrap",
                      "paddingBottom": 5,
                      "paddingLeft": 5,
                      "paddingRight": 5,
                      "paddingTop": 5,
                    },
                    undefined,
                  ],
                ]
              }
              width={540}
            >
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Time"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Time
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Pair"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Pair
                </Text>
              </View>
              <View
                flexItem={1}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Type"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Type
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Price (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Price (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Total (WETH)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Total (WETH)
                </Text>
              </View>
              <View
                flexItem={2}
                style={
                  Array [
                    Object {},
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexBasis": 0,
                        "flexGrow": 2,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                  ]
                }
                width={540}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  bold={true}
                  data="Fee (ZRX)"
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "Open Sans",
                      },
                      Array [
                        Object {
                          "fontSize": 12,
                          "fontWeight": "700",
                          "lineHeight": 15,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Fee (ZRX)
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "borderBottomWidth": 1,
                      "borderColor": "#5d5959",
                      "borderTopWidth": 1,
                      "height": 5,
                    },
                    undefined,
                  ],
                ]
              }
            />
          </View>
          <RCTScrollView
            data={Array []}
            disableVirtualization={false}
            getItem={[Function]}
            getItemCount={[Function]}
            horizontal={false}
            initialNumToRender={10}
            invertStickyHeaders={undefined}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onContentSizeChange={[Function]}
            onEndReachedThreshold={2}
            onLayout={[Function]}
            onMomentumScrollEnd={[Function]}
            onScroll={[Function]}
            onScrollBeginDrag={[Function]}
            onScrollEndDrag={[Function]}
            renderItem={[Function]}
            scrollEventThrottle={50}
            stickyHeaderIndices={Array []}
            updateCellsBatchingPeriod={50}
            viewabilityConfigCallbackPairs={Array []}
            windowSize={21}
          >
            <View />
          </RCTScrollView>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
